--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     
     <!-- banner section -->
      
-    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto my-[100px] space-y-[30px]">
+    <section class="grid grid-cols-1 md:grid-cols-2 max-w-[80%] mx-auto mt-[50px] space-y-[30px]">
         <div class="banner-left">
-            <h2 class="text-[80px] font-bold">It's good <br> tea time at The <br> Tea House</h2>
+            <h2 class="lg:text-[60px] text-[40px] font-bold">It's good <br> tea time at The <br> Tea House</h2>
             <p class="text-[#777777] py-[30px]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
             <button class="py-3 px-5 rounded-md text-white bg-linear-65 from-[#FF0000] to-[#FF8938]">Explore More</button>
         </div>
 
         <div class="banner-right flex justify-end items-end relative">
             <img src="./images/banner.png" alt="">
-            <div class="bg-white rounded-xl flex justify-center items-center shadow-2xl w-[250px] gap-2 absolute bottom-[15px] left-[220px] py-[25px] px-[15px]">
+            <div class="bg-white rounded-xl flex justify-center items-center shadow-2xl w-[250px] gap-2 absolute bottom-[15px] md:left-[220px] py-[25px] px-[15px]">
                 <img src="./images/Vector.png" alt="">
                 <div>
                     <h2 class="font-bold text-2xl">5.00</h2>
@@ -44,6 +44,43 @@
             </div>
         </div>
     </section>
+
+    <!-- featured section -->
+     <section class="container mx-auto my-[90px]">
+        <div class="text-center md:max-w-[65%] w-[90%] mx-auto">
+            <h2 class="text-[45px] font-bold">Our Featured Products</h2>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+
+        <!-- featured card -->
+
+        <div class="max-w-[80%] mx-auto grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-2 grid-cols-1 gap-4 pt-[50px]">
+
+            <div class="bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] rounded-[10px] p-7 text-center">
+                <img src="./images/tea-1.png" alt="" class="mx-auto pb-4">
+                <h2 class="font-semibold text-xl">Milk Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+
+            <div class="bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] rounded-[10px] p-7 text-center">
+                <img src="./images/tea-2.png" alt="" class="mx-auto pb-4">
+                <h2 class="font-semibold text-xl">Black Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+
+            <div class="bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] rounded-[10px] p-7 text-center">
+                <img src="./images/tea-3.png" alt="" class="mx-auto pb-4">
+                <h2 class="font-semibold text-xl">Lemon Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+
+            <div class="bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] rounded-[10px] p-7 text-center">
+                <img src="./images/tea-4.png" alt="" class="mx-auto pb-4">
+                <h2 class="font-semibold text-xl">Green Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+        </div>
+     </section>
 
 </body>
 </html>
