--- a/index.html
+++ b/index.html
@@ -82,5 +82,28 @@
         </div>
      </section>
 
+     <!-- great tea section -->
+      <section class="max-w-[80%] grid md:grid-cols-2 grid-cols-1 mx-auto gap-10 mb-[50px]">
+        <div class="grid grid-cols-2 gap-8 order-2 md:order-1">
+        <div class="bg-linear-to-t from-[#ff0000] to-[#ff8938] opacity-10 rounded-[10px]"></div>
+        <div class="row-span-2 bg-[#e6a6231a] flex justify-center items-center rounded-[10px]">
+            <img src="./images/fresh-1.png" alt="">
+        </div>
+        <div class="row-span-2 bg-[#5776391a] flex justify-center items-center rounded-[10px]">
+            <img src="./images/fresh-2.png" alt="">
+        </div>
+        <div class="bg-linear-to-r from-[#d9d9d9] to-[#ffffff00] rounded-[10px]"></div>
+    </div>
+
+      <div class="space-y-4 order-1 md:order-2">
+        <h2 class="text-[45px] font-bold">Great Tea, Freshly Presented</h2>
+        <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+        <h3 class="font-bold text-[20px]">Unique Taste</h3>
+        <p class="text-[#777777]">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+        <h3 class="font-bold text-[20px]">Premium Quality</h3>
+        <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+      </div>
+      </section>
+
 </body>
 </html>
