--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="banner-left">
             <h2 class="lg:text-[60px] text-[40px] font-bold">It's good <br> tea time at The <br> Tea House</h2>
             <p class="text-[#777777] py-[30px]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-            <button class="py-3 px-5 rounded-md text-white bg-linear-65 from-[#FF0000] to-[#FF8938]">Explore More</button>
+            <button class="py-3 px-5 rounded-md text-white bg-linear-65 from-[#FF0000] to-[#FF8938]">Explore More <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right"></i></span></button>
         </div>
 
         <div class="banner-right flex justify-end items-end relative">
@@ -104,6 +104,46 @@
         <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
       </div>
       </section>
+
+      <!-- meet our super client -->
+       <section class="max-w-[80%] grid lg:grid-cols-2 grid-cols-1 mx-auto gap-10 mb-[50px] bg-linear-to-r from-[#FF8938] to-[#FF0000] rounded-lg">
+
+        <div class="p-[70px] text-white">
+            <h2 class="font-bold text-[40px]">Meet Our Super Clients</h2>
+            <p class="py-6 font-semibold">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            <button class="py-3 px-5 rounded-md bg-white font-bold"><span class="bg-linear-65 from-[#FF0000] to-[#FF8938] bg-clip-text text-transparent">Show All</span></button>
+        </div>
+
+        <div class="grid place-items-center relative">
+            <div class="bg-white rounded-lg p-6 absolute -left-[100px] top-[170px]  z-50 w-[370px]">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h2 class="text-xl font-bold">Ilham Yuda</h2>
+                <h3 class="font-bold text-[#777777]">Businessman</h3>
+              <div class="absolute top-[-30px] left-[-30px] bg-white p-1 rounded-full">
+                  <img src="./images/client.png" alt="">
+              </div>
+                <img src="./images/circles.png" alt="" class="absolute right-4 bottom-4">
+            </div>
+
+            <div class="bg-white rounded-lg p-6 relative w-[370px] opacity-30">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h2 class="text-xl font-bold">Ilham Yuda</h2>
+                <h3 class="font-bold text-[#777777]">Businessman</h3>
+              <div class="absolute top-[-30px] left-[-30px] bg-white p-1 rounded-full">
+                  <img src="./images/client.png" alt="">
+              </div>
+            </div>
+
+            <div class="bg-white rounded-lg p-6 relative w-[370px] opacity-30">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h2 class="text-xl font-bold">Ilham Yuda</h2>
+                <h3 class="font-bold text-[#777777]">Businessman</h3>
+              <div class="absolute top-[-30px] left-[-30px] bg-white p-1 rounded-full">
+                  <img src="./images/client.png" alt="">
+              </div>
+            </div>
+        </div>
+       </section>
 
 </body>
 </html>
