added my footer file

--- a/index.html
+++ b/index.html
@@ -145,5 +145,57 @@
         </div>
        </section>
 
+       <!-- footer section -->
+        <footer class="bg-[#ffefe9]">
+            
+            <div class="max-w-[80%] mx-auto py-20 space-y-8">
+                <!-- footer top -->
+                <div class="flex justify-between">
+                <img src="./images/cup.png" alt="">
+                <div class="flex items-center gap-4">
+                <p>Ready to get started?</p>
+                <button class="py-3 px-5 rounded-md text-white bg-linear-65 from-[#FF0000] to-[#FF8938]">Get Started</button>
+                </div>
+            </div>
+                <!-- footer links -->
+                 <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-[25px] text-center md:text-left">
+                    <ul class="text-[#777777]  space-y-4">
+                        <li class="font-bold text-xl text-black">Quick Links</li>
+                        <li>Home</li>
+                        <li>About Us</li>
+                        <li>Insurance</li>
+                        <li>Privacy Policy</li>
+                </ul>
+                    <ul class="text-[#777777]  space-y-4">
+                        <li class="font-bold text-xl text-black">Our Service</li>
+                        <li>Life Insurance</li>
+                        <li>Car Insurance</li>
+                        <li>Health Insurance</li>
+                        <li>House Insurance</li>
+                    </ul>
+                    <ul class="text-[#777777]  space-y-4">
+                        <li class="font-bold text-xl text-black">Help</li>
+                        <li>FAQs</li>
+                        <li>Contact Us</li>
+                    </ul>
+                    <div class="text-[#777777]">
+                        <h2 class="text-xl font-bold text-black pb-4">Subscribe to our newsletter</h2>
+                        <div class="flex gap-5">
+                        <input type="text" placeholder="Email Address" class="border-b-2 pb-2 outline-none w-full">
+                        <button class="h-6 w-8 rounded-full text-white bg-linear-65 from-[#FF0000] to-[#FF8938]"> <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                        <div class="flex pt-8 gap-5">
+                            <span><i class="fa-brands fa-facebook-f"></i></span>
+                            <span><i class="fa-brands fa-twitter"></i></span>
+                            <span><i class="fa-brands fa-instagram"></i></span>
+                        </div>
+                    </div>
+                 </div>
+
+                 <!-- footer bottom -->
+                  <p class="text-center text-[#777777] pt-10">© 2027 UIDesign.to - All rights reserved.</p>
+            </div>
+        </footer>
+
 </body>
 </html>
